--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,10 +25,15 @@ jobs:
       - name: Post-Configure WSL
         run: |
             $WSL_IP = (wsl -u root hostname -I).Split()[0].Trim()
+            $LOCAL_IP = (Find-NetRoute -RemoteIPAddress $WSL_IP | Select-Object -First 1).IPAddress
             $COMPOSE_PATH = (wsl wslpath -a .\\compose.yml).Trim()
             wsl -u root sysctl -w net.ipv4.ip_forward=1
             wsl -u root sh -c "curl -fsSL https://get.docker.com | sh"
             wsl -u root docker compose -f $COMPOSE_PATH up --build --detach
+            route add 10.1.0.0 mask 255.255.255.0 $WSL_IP
+            wsl -u root iptables -t filter -A DOCKER-USER -d $LOCAL_IP -s 10.1.0.0/24 -j ACCEPT
+            wsl -u root iptables -t filter -A DOCKER-USER -d 10.1.0.0/24 -s $LOCAL_IP -j ACCEPT
+            wsl -u root iptables -t nat -A POSTROUTING -s $LOCAL_IP -d 10.1.0.0/24 -j MASQUERADE
             wsl -u root sleep 30
 
       - name: TEST STEP
@@ -57,3 +62,9 @@ jobs:
           wsl -u root curl -I 10.1.0.42:80
           wsl echo -e "\n\n\nDownloading from beta:"
           wsl -u root curl -I 10.1.0.24:80
+          wsl echo -e "\n\n\nGetting route to alpha from Windows:"
+          Find-NetRoute -RemoteIPAddress 10.1.0.42
+          wsl echo -e "\n\n\nPinging alpha from Windows:"
+          ping -n 5 10.1.0.42
+          wsl echo -e "\n\n\nDownloading from alpha from Windows:"
+          Invoke-WebRequest -Uri http://10.1.0.42:80 -Method Head
