--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,9 +31,16 @@ jobs:
             wsl -u root sh -c "curl -fsSL https://get.docker.com | sh"
             wsl -u root docker compose -f $COMPOSE_PATH up --build --detach
             route add 10.1.0.0 mask 255.255.255.0 $WSL_IP
+            wsl -u root iptables -t filter -A DOCKER-USER -s $LOCAL_IP -d 10.1.0.0/24 -j LOG --log-prefix "TEST ACCEPT FORWARD: "
+            wsl -u root iptables -t filter -A DOCKER-USER -s $LOCAL_IP -d 10.1.0.0/24 -j ACCEPT
+            wsl -u root iptables -t filter -A DOCKER-USER -d $LOCAL_IP -s 10.1.0.0/24 -j LOG --log-prefix "TEST ACCEPT BACKWARD: "
             wsl -u root iptables -t filter -A DOCKER-USER -d $LOCAL_IP -s 10.1.0.0/24 -j ACCEPT
-            wsl -u root iptables -t filter -A DOCKER-USER -d 10.1.0.0/24 -s $LOCAL_IP -j ACCEPT
+            wsl -u root iptables -t nat -A POSTROUTING -s $LOCAL_IP -d 10.1.0.0/24 -j LOG --log-prefix "TEST MASQUERADE: "
             wsl -u root iptables -t nat -A POSTROUTING -s $LOCAL_IP -d 10.1.0.0/24 -j MASQUERADE
+            New-NetFirewallRule -DisplayName "Allow All to WSL2" -Direction Inbound -Action Allow -RemoteAddress $WSL_IP -Protocol Any -Profile Any -Enabled True
+            New-NetFirewallRule -DisplayName "Allow All to WSL2" -Direction Outbound -Action Allow -RemoteAddress $WSL_IP -Protocol Any -Profile Any -Enabled True
+            New-NetFirewallRule -DisplayName "Allow All to WSL2" -Direction Inbound -Action Allow -LocalAddress $WSL_IP -Protocol Any -Profile Any -Enabled True
+            New-NetFirewallRule -DisplayName "Allow All to WSL2" -Direction Outbound -Action Allow -LocalAddress $WSL_IP -Protocol Any -Profile Any -Enabled True
             wsl -u root sleep 30
 
       - name: TEST STEP
@@ -64,7 +71,11 @@ jobs:
           wsl -u root curl -I 10.1.0.24:80
           wsl echo -e "\n\n\nGetting route to alpha from Windows:"
           Find-NetRoute -RemoteIPAddress 10.1.0.42
+          wsl echo -e "\n\n\nGetting routes to the compose network from Windows:"
+          route print 10.1.0.0
           wsl echo -e "\n\n\nPinging alpha from Windows:"
           ping -n 5 10.1.0.42
           wsl echo -e "\n\n\nDownloading from alpha from Windows:"
           Invoke-WebRequest -Uri http://10.1.0.42:80 -Method Head
+          wsl echo -e "\n\n\nWSL firewall logs:"
+          wsl -u root journalctl -k | grep "TEST"
