--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,6 +76,6 @@ jobs:
           wsl echo -e "\n\n\nPinging alpha from Windows:"
           ping -n 5 10.21.0.42
           wsl echo -e "\n\n\nDownloading from alpha from Windows:"
-          Invoke-WebRequest -Uri http://10.21.0.42:80 -Method Head
+          Invoke-WebRequest -Uri http://10.21.0.42:80 -Method Head -ErrorAction SilentlyContinue
           wsl echo -e "\n\n\nWSL firewall logs:"
           wsl -u root journalctl -k | grep "TEST"
