--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,7 +76,7 @@ jobs:
           wsl echo -e "\n\n\nPinging alpha from Windows:"
           ping -n 5 10.21.0.42
           wsl echo -e "\n\n\nDownloading from alpha from Windows:"
-          try { Invoke-WebRequest -Uri http://10.21.0.42:80 -Method Head } catch { Write-Output "Invoke-WebRequest failed..." }
+          try { (New-Object Net.Sockets.TcpClient).Connect("10.21.0.42", 80) } catch { Write-Output "Invoke-WebRequest failed..." }
           wsl echo -e "\n\n\nWSL firewall logs:"
           wsl -u root journalctl -k | grep "TEST"
           wsl echo -e "\n\n\nDocker compose logs:"
