--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,6 +51,10 @@ jobs:
           wsl -u root docker network ls
           wsl echo -e "\n\n\nDocker container list:"
           wsl -u root docker compose -f $COMPOSE_PATH ps
+          wsl echo -e "\n\n\nIP address list:"
+          wsl -u root ip addr show
+          wsl echo -e "\n\n\nRoute list:"
+          wsl -u root ip route show
           wsl echo -e "\n\n\nGetting route to alpha from Windows:"
           Find-NetRoute -RemoteIPAddress 10.21.0.42
           wsl echo -e "\n\n\nGetting routes to the compose network from Windows:"
@@ -59,16 +63,16 @@ jobs:
           ping -n 5 10.21.0.42
           wsl echo -e "\n\n\nDownloading from alpha from Windows:"
           try { (New-Object Net.Sockets.TcpClient).Connect("10.21.0.42", 5000) } catch { Write-Output "Invoke-WebRequest failed..." }
+          wsl echo -e "\n\n\nIptables filter table logs:"
+          wsl -u root iptables -t filter -L -v -n
+          wsl echo -e "\n\n\nIptables nat table logs:"
+          wsl -u root iptables -t nat -L -v -n
           wsl echo -e "\n\n\nWSL firewall logs:"
           wsl -u root journalctl -k | grep "TEST"
           wsl echo -e "\n\n\nDocker compose logs:"
           wsl -u root docker compose -f $COMPOSE_PATH logs
 
 
-#          wsl echo -e "\n\n\nIP address list:"
-#          wsl -u root ip addr show
-#          wsl echo -e "\n\n\nRoute list:"
-#          wsl -u root ip route show
 #          wsl echo -e "\n\n\nPinging alpha:"
 #          wsl -u root ping -c 5 10.21.0.42
 #          wsl echo -e "\n\n\nPinging beta:"
