--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,10 +26,10 @@ jobs:
             $LOCAL_IP = (Find-NetRoute -RemoteIPAddress $WSL_IP | Select-Object -First 1).IPAddress
             $COMPOSE_PATH = (wsl wslpath -a .\\compose.yml).Trim()
             wsl -u root sysctl -w net.ipv4.ip_forward=1
+            wsl -u root sysctl -w net.ipv4.conf.all.rp_filter=0
             wsl -u root sh -c "curl -fsSL https://get.docker.com | sh"
             wsl -u root docker compose -f $COMPOSE_PATH up --build --detach
             route add 10.21.0.0 mask 255.255.255.0 $WSL_IP
-            wsl -u root iptables -t filter -I DOCKER-ISOLATION-STAGE-2 -j RETURN
             wsl -u root iptables -t filter -A DOCKER-USER -s $LOCAL_IP -d 10.21.0.0/24 -j LOG --log-prefix "TEST ACCEPT FORWARD: "
             wsl -u root iptables -t filter -A DOCKER-USER -s $LOCAL_IP -d 10.21.0.0/24 -j ACCEPT
             wsl -u root iptables -t filter -A DOCKER-USER -d $LOCAL_IP -s 10.21.0.0/24 -j LOG --log-prefix "TEST ACCEPT BACKWARD: "
@@ -64,6 +64,8 @@ jobs:
           ping -n 5 10.21.0.42
           wsl echo -e "\n\n\nDownloading from alpha from Windows:"
           try { (New-Object Net.Sockets.TcpClient).Connect("10.21.0.42", 5000) } catch { Write-Output "Invoke-WebRequest failed..." }
+          wsl echo -e "\n\n\nInterface counters:"
+          wsl -u root ip -s link show
           wsl echo -e "\n\n\nIptables filter table logs:"
           wsl -u root iptables -t filter -L -v -n
           wsl echo -e "\n\n\nIptables nat table logs:"
