--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,8 +46,6 @@ jobs:
         run: |
           $WSL_IP = (wsl -u root hostname -I).Split()[0].Trim()
           $COMPOSE_PATH = (wsl wslpath -a .\\compose.yml).Trim()
-          wsl echo -e "Docker journal logs:"
-          wsl -u root journalctl -u docker
           wsl echo -e "\n\n\nDocker network list:"
           wsl -u root docker network ls
           wsl echo -e "\n\n\nDocker container list:"
@@ -58,10 +56,8 @@ jobs:
           wsl -u root ip route show
           wsl echo -e "\n\n\nGetting route to alpha from Windows:"
           Find-NetRoute -RemoteIPAddress 10.21.0.42
-          wsl echo -e "\n\n\nGetting routes to the compose network from Windows:"
-          route print 10.21.0.0
-          wsl echo -e "\n\n\nPinging alpha from Windows:"
-          ping -n 5 10.21.0.42
+          wsl echo -e "Docker journal logs:"
+          wsl -u root journalctl -u docker
           wsl echo -e "\n\n\nDownloading from alpha from Windows:"
           try { (New-Object Net.Sockets.TcpClient).Connect("10.21.0.42", 5000) } catch { Write-Output "Invoke-WebRequest failed..." }
           wsl echo -e "\n\n\nInterface counters:"
@@ -86,6 +82,8 @@ jobs:
           wsl -u root docker compose -f $COMPOSE_PATH logs
 
 
+#          wsl echo -e "\n\n\nGetting routes to the compose network from Windows:"
+#          route print 10.21.0.0
 #          wsl echo -e "\n\n\nPinging alpha:"
 #          wsl -u root ping -c 5 10.21.0.42
 #          wsl echo -e "\n\n\nPinging beta:"
