--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,7 @@ jobs:
             wsl -u root sysctl -w net.ipv4.ip_forward=1
             wsl -u root sysctl -w net.ipv4.conf.all.rp_filter=0
             wsl -u root sh -c "curl -fsSL https://get.docker.com | sh"
-            wsl -u root systemctl enable docker
-            wsl -u root systemctl start docker
+            wsl -u root nohup dockerd > /var/log/docker.log 2>&1 &
             wsl -u root docker compose -f $COMPOSE_PATH up --build --detach
             route add 10.21.0.0 mask 255.255.255.0 $WSL_IP
             wsl -u root iptables -t filter -A DOCKER-USER -s $LOCAL_IP -d 10.21.0.0/24 -j LOG --log-prefix "TEST ACCEPT FORWARD: "
@@ -54,6 +53,8 @@ jobs:
           wsl -u root ip route show
           wsl echo -e "\n\n\nGetting route to alpha from Windows:"
           Find-NetRoute -RemoteIPAddress 10.21.0.42
+          wsl echo -e "Docker file logs:"
+          wsl -u root cat /var/log/docker.log
           wsl echo -e "Docker journal logs:"
           wsl -u root journalctl -u docker
           wsl echo -e "All the journal logs:"
@@ -62,6 +63,8 @@ jobs:
           try { (New-Object Net.Sockets.TcpClient).Connect("10.21.0.42", 5000) } catch { Write-Output "Invoke-WebRequest failed..." }
           wsl echo -e "\n\n\nInterface counters:"
           wsl -u root ip -s link show
+          wsl echo -e "Docker file logs:"
+          wsl -u root cat /var/log/docker.log
           wsl echo -e "Docker journal logs:"
           wsl -u root journalctl -u docker
           wsl echo -e "All the journal logs:"
