--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           distribution: Ubuntu-22.04
           set-as-default: true
+          wsl-conf: |
+            [boot]
+            systemd = true
 
       - name: Post-Configure WSL
         run: |
@@ -28,9 +31,9 @@ jobs:
             wsl -u root sysctl -w net.ipv4.ip_forward=1
             wsl -u root sysctl -w net.ipv4.conf.all.rp_filter=0
             wsl -u root sh -c "curl -fsSL https://get.docker.com | sh"
-            wsl -u root sh -c "nohup dockerd > /var/log/docker.log 2>&1 &"
             wsl -u root sleep 15
             wsl -u root docker compose -f $COMPOSE_PATH up --build --detach
+            wsl -u root sleep 15
             route add 10.21.0.0 mask 255.255.255.0 $WSL_IP
             wsl -u root iptables -t filter -A DOCKER-USER -s $LOCAL_IP -d 10.21.0.0/24 -j LOG --log-prefix "TEST ACCEPT FORWARD: "
             wsl -u root iptables -t filter -A DOCKER-USER -s $LOCAL_IP -d 10.21.0.0/24 -j ACCEPT
