--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,11 +17,8 @@ jobs:
       - name: Setup WSL
         uses: Vampire/setup-wsl@v5
         with:
-          distribution: Ubuntu-22.04
+          distribution: Ubuntu-24.04
           set-as-default: true
-          wsl-conf: |
-            [boot]
-            systemd = true
 
       - name: Post-Configure WSL
         run: |
@@ -86,6 +83,8 @@ jobs:
           wsl -u root journalctl -k | grep "TEST"
           wsl echo -e "\n\n\nDocker compose logs:"
           wsl -u root docker compose -f $COMPOSE_PATH logs
+          
+          %LOCALAPPDATA%\Packages\
 
 
 #          wsl echo -e "\n\n\nGetting routes to the compose network from Windows:"
