--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,9 +61,10 @@ jobs:
           wsl -u root journalctl -u docker
           wsl echo -e "All the journal logs:"
           wsl -u root journalctl -b
-          wsl echo -e "\n\n\nDownloading from alpha from Windows:"
           wsl echo -e "\n\n\nPinging alpha from Windows:"
           ping -n 5 10.21.0.42
+          wsl echo -e "\n\n\nDownloading from alpha from Windows:"
+          try { (New-Object Net.Sockets.TcpClient).Connect("10.21.0.42", 5000) } catch { Write-Output "Invoke-WebRequest failed..." }
           wsl echo -e "\n\n\nInterface counters:"
           wsl -u root ip -s link show
           wsl echo -e "Docker journal logs:"
