--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,96 +11,20 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout 🛎️
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup WSL
-        uses: Vampire/setup-wsl@v5
+      - name: Setup Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          distribution: Ubuntu-24.04
-          set-as-default: true
+          toolchain: stable
+          target: "x86_64-pc-windows-msvc"
+          override: true
 
-      - name: Post-Configure WSL
-        run: |
-            $WSL_IP = (wsl -u root hostname -I).Split()[0].Trim()
-            $LOCAL_IP = (Find-NetRoute -RemoteIPAddress $WSL_IP | Select-Object -First 1).IPAddress
-            $COMPOSE_PATH = (wsl wslpath -a .\\compose.yml).Trim()
-            wsl -u root sysctl -w net.ipv4.ip_forward=1
-            wsl -u root sysctl -w net.ipv4.conf.all.rp_filter=0
-            wsl -u root sh -c "curl -fsSL https://get.docker.com | sh"
-            wsl -u root sleep 15
-            wsl -u root docker compose -f $COMPOSE_PATH up --build --detach
-            wsl -u root sleep 15
-            route add 10.21.0.0 mask 255.255.255.0 $WSL_IP
-            wsl -u root iptables -t filter -A DOCKER-USER -s $LOCAL_IP -d 10.21.0.0/24 -j LOG --log-prefix "TEST ACCEPT FORWARD: "
-            wsl -u root iptables -t filter -A DOCKER-USER -s $LOCAL_IP -d 10.21.0.0/24 -j ACCEPT
-            wsl -u root iptables -t filter -A DOCKER-USER -d $LOCAL_IP -s 10.21.0.0/24 -j LOG --log-prefix "TEST ACCEPT BACKWARD: "
-            wsl -u root iptables -t filter -A DOCKER-USER -d $LOCAL_IP -s 10.21.0.0/24 -j ACCEPT
-            wsl -u root iptables -t nat -A POSTROUTING -s $LOCAL_IP -d 10.21.0.0/24 -j LOG --log-prefix "TEST MASQUERADE: "
-            wsl -u root iptables -t nat -A POSTROUTING -s $LOCAL_IP -d 10.21.0.0/24 -j MASQUERADE
-            New-NetFirewallRule -DisplayName "Allow All to WSL2" -Direction Inbound -Action Allow -RemoteAddress $WSL_IP -Protocol Any -Profile Any -Enabled True
-            New-NetFirewallRule -DisplayName "Allow All to WSL2" -Direction Outbound -Action Allow -RemoteAddress $WSL_IP -Protocol Any -Profile Any -Enabled True
-            New-NetFirewallRule -DisplayName "Allow All to WSL2" -Direction Inbound -Action Allow -LocalAddress $WSL_IP -Protocol Any -Profile Any -Enabled True
-            New-NetFirewallRule -DisplayName "Allow All to WSL2" -Direction Outbound -Action Allow -LocalAddress $WSL_IP -Protocol Any -Profile Any -Enabled True
+      - name: Download Dependencies
+        run: make dependencies
 
-      - name: TEST STEP
-        run: |
-          $WSL_IP = (wsl -u root hostname -I).Split()[0].Trim()
-          $COMPOSE_PATH = (wsl wslpath -a .\\compose.yml).Trim()
-          wsl echo -e "\n\n\nDocker network list:"
-          wsl -u root docker network ls
-          wsl echo -e "\n\n\nDocker container list:"
-          wsl -u root docker compose -f $COMPOSE_PATH ps
-          wsl echo -e "\n\n\nIP address list:"
-          wsl -u root ip addr show
-          wsl echo -e "\n\n\nRoute list:"
-          wsl -u root ip route show
-          wsl echo -e "\n\n\nGetting route to alpha from Windows:"
-          Find-NetRoute -RemoteIPAddress 10.21.0.42
-          wsl echo -e "Docker journal logs:"
-          wsl -u root journalctl -u docker
-          wsl echo -e "All the journal logs:"
-          wsl -u root journalctl -b
-          wsl echo -e "\n\n\nPinging alpha from Windows:"
-          ping -n 5 10.21.0.42
-          wsl echo -e "\n\n\nDownloading from alpha from Windows:"
-          try { (New-Object Net.Sockets.TcpClient).Connect("10.21.0.42", 5000) } catch { Write-Output "Invoke-WebRequest failed..." }
-          wsl echo -e "\n\n\nInterface counters:"
-          wsl -u root ip -s link show
-          wsl echo -e "Docker journal logs:"
-          wsl -u root journalctl -u docker
-          wsl echo -e "All the journal logs:"
-          wsl -u root journalctl -b
-          wsl echo -e "All the kernel logs:"
-          wsl -u root journalctl -k
-          wsl echo -e "\n\n\nDocker network list:"
-          wsl -u root docker network ls
-          wsl echo -e "\n\n\nDocker container list:"
-          wsl -u root docker compose -f $COMPOSE_PATH ps
-          wsl echo -e "\n\n\nIP address list:"
-          wsl -u root ip addr show
-          wsl echo -e "\n\n\nRoute list:"
-          wsl -u root ip route show
-          wsl echo -e "\n\n\nIptables filter table logs:"
-          wsl -u root iptables -t filter -L -v -n
-          wsl echo -e "\n\n\nIptables nat table logs:"
-          wsl -u root iptables -t nat -L -v -n
-          wsl echo -e "\n\n\nWSL firewall logs:"
-          wsl -u root journalctl -k | grep "TEST"
-          wsl echo -e "\n\n\nDocker compose logs:"
-          wsl -u root docker compose -f $COMPOSE_PATH logs
-
-
-
-
-#          try { (New-Object Net.Sockets.TcpClient).Connect("10.21.0.42", 5000) } catch { Write-Output "Invoke-WebRequest failed..." }
-#          wsl echo -e "\n\n\nGetting routes to the compose network from Windows:"
-#          route print 10.21.0.0
-#          wsl echo -e "\n\n\nPinging alpha:"
-#          wsl -u root ping -c 5 10.21.0.42
-#          wsl echo -e "\n\n\nPinging beta:"
-#          wsl -u root ping -c 5 10.21.0.24
-#          wsl echo -e "\n\n\nConnecting to alpha:"
-#          wsl -u root nc -vz 10.21.0.42 5000
-#          wsl echo -e "\n\n\nConnecting to beta:"
-#          wsl -u root nc -vz 10.21.0.24 5000
+      - name: Run Test
+        env:
+          WINDIVERT_PATH: ${{ github.workspace }}/windivert-bin
+        run: cargo run
